overflow fixed

--- a/app/assets/stylesheets/components/_whitecard.scss
+++ b/app/assets/stylesheets/components/_whitecard.scss
@@ -8,8 +8,31 @@
   padding-top: 18px;
   padding: 21px;
   margin: 15px auto;
-  height: 475px;
-  width: 800px;
+  height: 350px;
+  width: 900px;
+  background-size: cover !important;
+  background-position:50% 50% !important;
+  background-color: white;
+  position: relative;
+  transition: .2s;
+  opacity: 0.8;
+  border-radius: 3px;
+  box-shadow: 1.5px 1.5px lightgrey;
+  font-family: 'Signika';
+}
+
+.form_whitecard {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  border-radius: 4px;
+  padding-top: 18px;
+  padding: 21px;
+  margin: 15px auto;
+  height: 481px;
+  width: 900px;
   background-size: cover !important;
   background-position:50% 50% !important;
   background-color: white;
@@ -22,6 +45,7 @@
 }
 
 .past_review_whitecard {
+  overflow-wrap: break-word;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -35,7 +59,7 @@
   margin-top: 15px;
   margin-bottom: 15px;
   height: 475px;
-  width: 800px;
+  width: 900px;
   background-size: cover !important;
   background-position:50% 50% !important;
   background-color: white;
